# aquamonitor

./: README.md  demo.ipynb  pyproject.toml
src/aquamonitor/: __init__.py  utils.py
tests/: conftest.py  test_full.py
